APDS-185,APDS-183,APDS-184  resolved issue with placement of dropdown breadcrumb menu,  resolved issue of header alert background color missing, and resolved issue of header icons using the wrong color font in the light scheme.

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -952,3 +952,9 @@ button.tooltips-right.normal-case span {
       background-color: #0090c6;
 
     }
+	
+	.home-link.pointer.btn-round-sm {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+}
